--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -218,6 +218,10 @@
                 background-color: white;
                 color: $mainColor;
             }
+
+            &:hover{
+                box-shadow: none;
+            }
         }
     }
 }
