--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./partials/baseFeatures";
 @import "./partials/prenavbar";
 @import "./partials/navbar";
+@import "./partials/modal";
 @import "./partials/intro";
 @import "./partials/story";
 @import "./partials/opening";
