--- a/assets/scss/partials/_prenavbar.scss
+++ b/assets/scss/partials/_prenavbar.scss
@@ -2,6 +2,7 @@
     background-color: transparent;
     padding: 12px 0;
     max-width: 90%;
+    display: flex;
     .languages{
         display: flex;
         align-items: baseline;
@@ -33,6 +34,7 @@
     }
 
     .info{
+
         a{
             color: $mainColor!important;
             font-weight: 600;
@@ -58,3 +60,8 @@
         
     }
 }
+
+.scrolled{
+    display: none;
+}
+
