--- a/assets/scss/partials/_specialities.scss
+++ b/assets/scss/partials/_specialities.scss
@@ -68,6 +68,7 @@
 
 
             li{
+                cursor: pointer;
                 a{
                     font-size: 20px;
                     color: white;
@@ -81,7 +82,7 @@
                 .menu-order{
 
                     font-size: 12px;
-                    color: $mainColor;
+                    color: white;
                     margin-right: 10px;
                 }
 
@@ -89,6 +90,31 @@
 
                     color: $mainColor;
                     margin-left: 50px;
+                    display: none;
+                }
+
+                &:hover{
+                    .menu-order{
+                        color: $mainColor;
+                    }
+
+                    a{
+                        color: $mainColor;
+                    }
+                }
+            }
+
+            li.active{
+                .menu-order{
+                    color: $mainColor;
+                }
+
+                i{
+                    display: inline;
+                }
+
+                a{
+                    color: $mainColor;
                 }
             }
         }
@@ -98,6 +124,7 @@
         padding-top: 27px;
 
         ul{
+            display: none;
 
             li{
                 span{
@@ -136,7 +163,20 @@
                         left: 245px;
                     }
                 }
+
+                
             }
+
+           
+        }
+
+        ul#sea{
+            padding-bottom: 134.8px
+        }
+
+        .show{
+            display:block
         }
     }
 }
+
