--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,3 +17,10 @@
 @import "./partials/about/stats";
 @import "./partials/about/video";
 @import "./partials/contact/contactIntro";
+@import "./partials/contact/touch";
+@import "./partials/menu/discover";
+@import "./partials/menu/menus";
+@import "./partials/signup/singupIntro";
+@import "./partials/signup/register";
+@import "./partials/checkout/checkIntro";
+@import "./partials/checkout/checkout";
