--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,3 +24,5 @@
 @import "./partials/signup/register";
 @import "./partials/checkout/checkIntro";
 @import "./partials/checkout/checkout";
+@import "./partials/cart/cartIntro";
+@import "./partials/cart/cart";
