--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -3304,4 +3304,232 @@ header {
   width: 100%;
   bottom: -15px;
 }
+
+#cart-intro {
+  padding: 180px 0 50px 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  background-position: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#cart-intro::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.308);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#cart-intro .scroll-down {
+  margin-top: 15%;
+}
+
+#cart-intro .mouse {
+  width: 20px;
+  height: 30px;
+  border-radius: 6px;
+  padding: 0 6px;
+  border: 2px solid #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  z-index: 10;
+}
+
+#cart-intro .mouse .yellow-dot {
+  position: relative;
+  left: 50%;
+  top: 6px;
+  margin-left: -2px;
+  width: 4px;
+  height: 4px;
+  background: #C19D60;
+  border-radius: 4px;
+  -webkit-animation-name: scrolling;
+          animation-name: scrolling;
+  -webkit-animation-duration: 2.2s;
+          animation-duration: 2.2s;
+  -webkit-animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+          animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+#cart-intro .dots {
+  color: #C19D60;
+}
+
+#cart-intro .section-footer {
+  height: 40px;
+  position: absolute;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  bottom: 0;
+}
+
+#cart {
+  padding: 80px 0;
+  position: relative;
+}
+
+#cart table th {
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+
+#cart table td {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
+#cart table td i {
+  color: #C19D60;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+#cart .apply .coupon input {
+  padding-left: 8px;
+  color: #000;
+  border: 0;
+  border: 1px solid #eee;
+  background: #f9f9f9;
+  border-radius: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+#cart .apply .coupon input:focus {
+  -webkit-box-shadow: 0px 10px 14px 0px #F4F4F6;
+          box-shadow: 0px 10px 14px 0px #F4F4F6;
+}
+
+#cart .apply .coupon .apply-btn {
+  color: #fff;
+  padding: 10px 20px;
+  background: #292929;
+  -webkit-appearance: none;
+  text-decoration: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  border-radius: 0;
+  border: 0;
+  font-size: 13px;
+  margin-left: 20px;
+}
+
+#cart .apply .coupon .apply-btn:hover {
+  background-color: #C19D60;
+  color: white;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+#cart .apply .coupon .apply-btn:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#cart .apply .update-btn {
+  color: #fff;
+  padding: 10px 20px;
+  background: #292929;
+  -webkit-appearance: none;
+  text-decoration: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  border-radius: 0;
+  border: 0;
+  font-size: 13px;
+  margin-left: 20px;
+}
+
+#cart .apply .update-btn:hover {
+  background-color: #C19D60;
+  color: white;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+#cart .apply .update-btn:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#cart .totals {
+  padding: 20px 20px;
+  background-color: #303030;
+}
+
+#cart .totals .total-inner {
+  background-color: #292929;
+  padding: 55px 40px;
+  border: 1px dashed rgba(255, 255, 255, 0.2);
+}
+
+#cart .totals .total-inner h5 {
+  color: #C19D60;
+  margin-bottom: 30px;
+}
+
+#cart .totals .total-inner p {
+  color: white;
+  font-size: 13px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 15px;
+}
+
+#cart .totals .total-inner span {
+  color: #C19D60;
+  font-size: 14px;
+}
+
+#cart .totals .total-inner .proceed {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#cart .totals .total-inner .proceed .proceed-btn {
+  color: white;
+  font-size: 14px;
+  padding: 15px 65px;
+  background-color: #C19D60;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#cart .totals .total-inner .proceed .proceed-btn:hover {
+  background-color: #666;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#cart .section-footer {
+  height: 40px;
+  position: absolute;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  bottom: -15px;
+}
 /*# sourceMappingURL=style.css.map */
