--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./partials/store";
 @import "./partials/testimonial";
 @import "./partials/footer";
+@import "./partials/error";
 @import "./partials/about/aboutIntro";
 @import "./partials/about/stats";
 @import "./partials/about/video";
