--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,3 +27,6 @@
 @import "./partials/checkout/checkout";
 @import "./partials/cart/cartIntro";
 @import "./partials/cart/cart";
+@import "./partials/shop/shopIntro";
+@import "./partials/shop/items";
+@import "./partials/item/itemintro.scss";
