--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -3601,4 +3601,584 @@ header {
   width: 100%;
   bottom: -15px;
 }
+
+#shop-intro {
+  padding: 180px 0 50px 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  background-position: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#shop-intro::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.308);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#shop-intro .scroll-down {
+  margin-top: 15%;
+}
+
+#shop-intro .mouse {
+  width: 20px;
+  height: 30px;
+  border-radius: 6px;
+  padding: 0 6px;
+  border: 2px solid #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  z-index: 10;
+}
+
+#shop-intro .mouse .yellow-dot {
+  position: relative;
+  left: 50%;
+  top: 6px;
+  margin-left: -2px;
+  width: 4px;
+  height: 4px;
+  background: #C19D60;
+  border-radius: 4px;
+  -webkit-animation-name: scrolling;
+          animation-name: scrolling;
+  -webkit-animation-duration: 2.2s;
+          animation-duration: 2.2s;
+  -webkit-animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+          animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+#shop-intro .dots {
+  color: #C19D60;
+}
+
+#shop-intro .section-footer {
+  height: 40px;
+  position: absolute;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  bottom: 0;
+}
+
+#items {
+  padding: 50px 0;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 100%;
+}
+
+#items .txt {
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+
+#items .txt p {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#items .txt p span {
+  color: #C19D60;
+}
+
+#items .txt select {
+  border: 1px solid #e1e1e1;
+  background: #F9F9F9;
+  font-size: 14px;
+  color: #666666;
+  font-family: "Poppins", sans-serif;
+  padding-right: 20px;
+  outline: none;
+  border-radius: 0;
+  font-weight: 500;
+}
+
+#items .txt select option {
+  color: #666666;
+}
+
+#items .txt select::-webkit-input-placeholder {
+  font-size: 13px;
+  color: #666666;
+}
+
+#items .txt select:-ms-input-placeholder {
+  font-size: 13px;
+  color: #666666;
+}
+
+#items .txt select::-ms-input-placeholder {
+  font-size: 13px;
+  color: #666666;
+}
+
+#items .txt select::placeholder {
+  font-size: 13px;
+  color: #666666;
+}
+
+#items .txt select:focus {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+#items .list .item {
+  margin-bottom: 30px;
+}
+
+#items .list .item .item-detail {
+  padding: 20px;
+  border: 1px solid #eee;
+  background: #f9f9f9;
+}
+
+#items .list .item .image {
+  overflow: hidden;
+  position: relative;
+}
+
+#items .list .item .image img {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#items .list .item .image .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  z-index: 20;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#items .list .item .image .overlay i {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #232323;
+  font-size: 14px;
+  font-weight: 500;
+  color: #C19D60;
+}
+
+#items .list .item .image:hover img {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#items .list .item .image:hover .overlay {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#items .list .item .top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#items .list .item .top a {
+  text-decoration: none;
+  color: black;
+  font-size: 17px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
+#items .list .item .top a:hover {
+  color: #C19D60;
+}
+
+#items .list .item .top span {
+  font-size: 12px;
+  font-style: italic;
+  color: #C19D60;
+  font-weight: 700;
+}
+
+#items .list .item p {
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  color: #666;
+  padding: 20px 0;
+  margin-bottom: 0;
+}
+
+#items .list .item .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#items .list .item .bottom span {
+  font-size: 22px;
+  color: #C19D60;
+}
+
+#items .list .item .bottom .add-btn {
+  font-size: 11px;
+  font-weight: 600;
+  background: #fff;
+  border: 1px solid #eee;
+  text-decoration: none;
+  color: black;
+  padding: 5px 10px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+#items .list .item .bottom .add-btn:hover {
+  background-color: #C19D60;
+  color: white;
+}
+
+#items .pagination {
+  background-color: #232323;
+  border-radius: 0;
+}
+
+#items .pagination ul {
+  margin-bottom: 0;
+}
+
+#items .pagination ul li {
+  padding: 15px;
+  border-right: 1px solid rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+}
+
+#items .pagination ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+#items .pagination ul li:hover a {
+  color: #C19D60;
+}
+
+#items .pagination ul li.on {
+  background-color: #C19D60;
+}
+
+#items .search {
+  border: 1px solid #e1e1e1;
+  background: #F9F9F9;
+  color: #666666;
+  padding: 10px;
+}
+
+#items .search input {
+  border: 1px solid #e1e1e1;
+  background: white;
+  font-size: 14px;
+  color: #666666;
+  font-family: "Poppins", sans-serif;
+  padding: 21px;
+  outline: none;
+  border-radius: 0;
+  font-weight: 500;
+}
+
+#items .search a {
+  text-decoration: none;
+  text-align: center;
+  padding: 10px 50px;
+  background-color: #C19D60;
+}
+
+#items .filter {
+  margin-top: 30px;
+}
+
+#items .filter p {
+  border: 1px solid #eee;
+  padding: 15px 10px;
+  font-size: 18px;
+  margin-bottom: 0;
+  font-weight: 600;
+  background: #f9f9f9;
+  color: #292929;
+  text-align: center;
+}
+
+#items .filter .irs-line {
+  height: 5px;
+}
+
+#items .filter .irs-single {
+  background-color: #C19D60;
+}
+
+#items .filter .irs-single::before {
+  border-top-color: #C19D60;
+}
+
+#items .filter .irs-handle i {
+  top: -3px;
+  background-color: #C19D60;
+}
+
+#items .filter .irs-bar {
+  height: 5px;
+  background-color: #C19D60;
+}
+
+#items .filter .update-btn {
+  font-size: 10px;
+  color: white;
+  font-weight: 600;
+  padding: 5px 10px;
+  background-color: #C19D60;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+}
+
+#items .popular {
+  margin-top: 30px;
+}
+
+#items .popular .popular-text {
+  border: 1px solid #eee;
+  padding: 15px 10px;
+  font-size: 18px;
+  margin-bottom: 0;
+  font-weight: 600;
+  background: #f9f9f9;
+  color: #292929;
+  text-align: center;
+}
+
+#items .popular-product {
+  margin-bottom: 15px;
+}
+
+#items .popular-product .small-txt .text {
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+#items .popular-product .small-txt .small-price .pricetxt {
+  font-size: 12px;
+  font-style: italic;
+}
+
+#items .popular-product .small-txt .small-price .digit {
+  color: #C19D60;
+}
+
+#items .popular-product .small-txt .small-price .reviews {
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  margin-left: 10px;
+}
+
+#items .categories .categorytxt {
+  border: 1px solid #eee;
+  padding: 15px 10px;
+  font-size: 18px;
+  margin-bottom: 0;
+  font-weight: 600;
+  background: #f9f9f9;
+  color: #292929;
+  text-align: center;
+}
+
+#items .categories .category-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px dotted #ccc;
+  margin-bottom: 15px;
+}
+
+#items .categories .category-link a {
+  color: black;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+#items .categories .category-link a:hover {
+  color: #C19D60;
+}
+
+#items .categories .category-link span {
+  font-family: "Poppins", sans-serif;
+  display: block;
+  color: white;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  background-color: #C19D60;
+  border-radius: 50%;
+}
+
+#items .tags .tagtxt {
+  border: 1px solid #eee;
+  padding: 15px 10px;
+  font-size: 18px;
+  margin-bottom: 0;
+  font-weight: 600;
+  background: #f9f9f9;
+  color: #292929;
+  text-align: center;
+}
+
+#items .tags .taglink {
+  background-color: #232323;
+  padding: 5px 7px;
+  float: left;
+  margin-top: 5px;
+}
+
+#items .tags .taglink a {
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+  font-style: italic;
+}
+
+#items .tags .taglink:hover {
+  background-color: #C19D60;
+}
+
+#items .tags .taglink:not(:last-child) {
+  margin-right: 5px;
+}
+
+#items .section-footer {
+  height: 40px;
+  position: absolute;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  bottom: -15px;
+}
+
+#item-intro {
+  padding: 180px 0 50px 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  background-position: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#item-intro::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.308);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#item-intro .scroll-down {
+  margin-top: 15%;
+}
+
+#item-intro .mouse {
+  width: 20px;
+  height: 30px;
+  border-radius: 6px;
+  padding: 0 6px;
+  border: 2px solid #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  z-index: 10;
+}
+
+#item-intro .mouse .yellow-dot {
+  position: relative;
+  left: 50%;
+  top: 6px;
+  margin-left: -2px;
+  width: 4px;
+  height: 4px;
+  background: #C19D60;
+  border-radius: 4px;
+  -webkit-animation-name: scrolling;
+          animation-name: scrolling;
+  -webkit-animation-duration: 2.2s;
+          animation-duration: 2.2s;
+  -webkit-animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+          animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+#item-intro .dots {
+  color: #C19D60;
+}
+
+#item-intro .section-footer {
+  height: 40px;
+  position: absolute;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  bottom: 0;
+}
 /*# sourceMappingURL=style.css.map */
