--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,4 +29,5 @@
 @import "./partials/cart/cart";
 @import "./partials/shop/shopIntro";
 @import "./partials/shop/items";
-@import "./partials/item/itemintro.scss";
+@import "./partials/item/itemIntro";
+@import "./partials/item/singleItem";
